implementation time comments are gone.